--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/chortle.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chortle</title>
+    <title>Chortle - Solve the puzzle and find the code</title>
   </head>
   <body>
     <div id="app"></div>
