--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3106217047040842"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
